--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
+  background: #2c2b32;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
