--- a/src/components/UI/Header/Header.styles.scss
+++ b/src/components/UI/Header/Header.styles.scss
@@ -3,7 +3,8 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: 1rem 4rem;
+  padding: 1rem 2rem;
+  margin: 1rem 4rem;
 
   .Header__logo {
     align-items: center;
@@ -27,8 +28,9 @@
     }
 
     .Header__sign-in {
-      background: #b958fc;
+      background: white;
       border-radius: 50px;
+      color: #2c2b32;
     }
   }
 }
