--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,22 @@
+/*#region Default: React */
 body {
   background: #2c2b32;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
   margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+/*#endregion /Default: React */
 
-.App {
-  text-align: center;
+/*#region Default: Native */
+a {
+  color: white;
+  text-decoration: none;
 }
+/*#endregion /Default: Native */
