--- a/src/components/UI/Footer/Footer.styles.scss
+++ b/src/components/UI/Footer/Footer.styles.scss
@@ -1,10 +1,12 @@
 /*#region UI: Footer */
 .Footer {
+  align-items: center;
   background-color: #25252b;
   color: #c1c1c1;
   display: flex;
-  align-items: center;
+  height: 18vh;
   justify-content: center;
-  padding: 1rem;
+  margin-top: 10vh;
+  width: 100%;
 }
 /*#endregion /UI: Footer */
