--- a/src/components/UI/Header/Header.styles.scss
+++ b/src/components/UI/Header/Header.styles.scss
@@ -2,29 +2,28 @@
 .Header {
   align-items: center;
   display: flex;
-  justify-content: space-between;
-  padding: 1rem 2rem;
-  margin: 1rem 4rem;
+  height: 18vh;
+  margin: auto;
+  width: 80%;
+
+  .Header__logo,
+  .Header__navigation,
+  .Header__cart {
+    display: flex;
+  }
 
   .Header__logo {
-    align-items: center;
+    flex: 1;
   }
 
   .Header__navigation {
-    align-items: center;
-    color: white;
-    display: flex;
-    height: 100%;
+    flex: 2;
     justify-content: flex-end;
 
     .Header__navigation-item {
-      cursor: pointer;
-      display: grid;
-      font-size: 20px;
-      letter-spacing: 1px;
-      margin: 0 1rem;
-      padding: 1rem 2rem;
-      place-items: center;
+      color: white;
+      font-size: 18px;
+      padding: 12px 18px;
     }
 
     .Header__sign-in {
@@ -32,6 +31,26 @@
       border-radius: 50px;
       color: #2c2b32;
     }
+
+    .Header__cart {
+      justify-content: flex-end;
+    }
   }
 }
+
+/*#region Media Queries */
+@media screen and (max-width: 1024px) {
+  .Header__logo {
+    transform: scale(0.7);
+  }
+
+  .Header__navigation-item {
+    display: none;
+
+    &.Header__cart {
+      display: none;
+    }
+  }
+}
+/*#endregion /Media Queries */
 /*#endregion /UI: Header */
