Improved ContactPage code to make it more readable and dynamic

--- a/src/components/UI/Header/Header.styles.scss
+++ b/src/components/UI/Header/Header.styles.scss
@@ -30,6 +30,8 @@
       background: white;
       border-radius: 50px;
       color: #2c2b32;
+      margin: 0 2rem;
+      padding: 12px 24px;
     }
 
     .Header__cart {
