--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
   margin: 0;
+  padding: 0;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
