Added ShopPage, ShopDirectory and DirectoryItem components. Also added responsive styling, render animation and on-hover blur filter

--- a/src/components/pages/ContactPage/ContactPage.styles.scss
+++ b/src/components/pages/ContactPage/ContactPage.styles.scss
@@ -45,14 +45,14 @@
   }
 
   .ContactPage__image {
-    flex: 1;
     display: flex;
-    justify-content: center;
+    flex: 1;
     height: 60vh;
+    justify-content: center;
 
     svg {
-      height: 100%;
       animation: drop 1.5s ease;
+      height: 100%;
     }
   }
 }
@@ -75,10 +75,10 @@
   }
 
   .ContactPage__introduction {
-    text-align: center;
+    text-align: start;
 
     .ContactPage__introduction-text {
-      text-align: center;
+      text-align: start;
 
       h1 {
         font-size: 40px;
