--- a/src/components/pages/ShopPage/ShopPage.styles.scss
+++ b/src/components/pages/ShopPage/ShopPage.styles.scss
@@ -2,8 +2,21 @@
 .ShopPage {
   align-items: center;
   display: flex;
-  margin: auto;
+  margin: 2rem auto auto auto;
   min-height: 80vh;
   width: 80%;
+
+  animation: drop 1.5s ease;
+}
+
+@keyframes drop {
+  0% {
+    opacity: 0;
+    transform: translateY(-80px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 /*#endregion /Page: ShopPage */
